# sonic-system-info

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md  org.kde.kinfocenter.appdata.xml  org.kde.kinfocenter.desktop
Categories/: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/about-distro/src/: CMakeLists.txt  Entry.cpp  Entry.h  Module.cpp  OSVersionEntry.cpp  OSVersionEntry.h  ThirdPartyEntry.cpp  ThirdPartyEntry.h  Version.h.cmake  about-distro.desktop  about-distro.json  main.cpp
Modules/about-distro/src/dmidecode-helper/: helper.cpp
Modules/about-distro/src/package/: metadata.json
Modules/about-distro/src/package/contents/: main.qml
Modules/about-distro/src/package/contents/ui/: main.qml
Modules/about-distro/src/ui/: main.qml
Modules/base/: info_linux.cpp  info_netbsd.cpp  os_current.cpp  os_current.h
Modules/cpu/: CMakeLists.txt  kcm_cpu.json  main.cpp
Modules/cpu/package/: metadata.json
Modules/devinfo/: CMakeLists.txt  devicelisting.cpp  devinfo.cpp  infopanel.cpp  soldevicetypes.cpp
Modules/egl/: CMakeLists.txt  kcm_egl.json
Modules/energy/: CMakeLists.txt  kcm.cpp
Modules/fileindexermonitor/: kcm.cpp
Modules/firmware_security/: CMakeLists.txt  main.cpp
Modules/glx/: CMakeLists.txt  kcm_glx.json
Modules/info/: CMakeLists.txt  info.h  interrupts.desktop  kcm_interrupts.cpp  main.cpp  wayland.desktop  xserver.desktop
Modules/interrupts/: CMakeLists.txt
Modules/kwinsupportinfo/: CMakeLists.txt  kcm_kwinsupportinfo.json  main.cpp
Modules/memory/: CMakeLists.txt  memory.cpp  physicalMemoryChart.cpp
Modules/network/: kcm_network.json
Modules/nics/: CMakeLists.txt  Messages.sh  networkmodel.cpp  networkmodel.h  nic.cpp  nic.desktop  nic.h
Modules/nics/package/: metadata.desktop  metadata.json
Modules/nics/package/content/: main.qml
Modules/nics/package/content/ui/: main.qml
Modules/nics/package/contents/ui/: main.qml
Modules/nics/ui/: main.qml
Modules/opencl/: CMakeLists.txt
Modules/opengl/: CMakeLists.txt  opengl.cpp
Modules/pci/: CMakeLists.txt  kcm_pci.cpp  kpci.cpp
Modules/plasma-systemmonitor/: CMakeLists.txt
Modules/samba/: CMakeLists.txt  ksambasharemodel.cpp  ksambasharemodel.h  org.freedesktop.Avahi.Server.xml  smbmountmodel.h
Modules/usbview/: CMakeLists.txt  kcmusb.cpp  kcmusb.h  usbdb.cpp  usbdevices.cpp  usbdevices.h  usbmodel.cpp  usbmodel.h
Modules/view1394/: CMakeLists.txt  view1394.cpp
Modules/vulkan/: CMakeLists.txt  kcm_vulkan.json
Modules/wayland/: CMakeLists.txt
Modules/xserver/: CMakeLists.txt
appiumtests/: CMakeLists.txt  about_this_system.py  kinfocenter_appiumtests.py
cmake/: Findsensors.cmake
doc/: index.docbook
kcms/: CMakeLists.txt
kcms/about-distro/: README
kcms/audio/: CMakeLists.txt  kcm_audio.json  main.cpp
kcms/audio_information/: kcm_audio_information.json
kcms/block_devices/: kcm_block_devices.json
kcms/edid/: kcm_edid.json
kcms/egl/: kcm_egl.json
kcms/energy/: kcm_energyinfo.json  statisticsprovider.cpp
kcms/firmware_security/: kcm_firmware_security.json
kcms/glx/: kcm_glx.json
kcms/kwinsupportinfo/: kcm_kwinsupportinfo.json.in
kcms/memory/: kcm_memory.json
kcms/network/: kcm_network.json
kcms/opencl/: kcm_opencl.json
kcms/pipewire/: CMakeLists.txt  kcm_pipewire.json  main.cpp
kcms/sensors/: kcm_sensors.json
kcms/vulkan/: kcm_vulkan.json
kcms/wayland/: kcm_wayland.json
kcms/xserver/: kcm_xserver.json
po/af/: kcm_samba.po  kcmusb.po
po/ar/: kcm_about-distro.po  kcm_energyinfo.po  kcm_samba.po  kcmusb.po
po/ast/: kcm_about-distro.po
po/az/: kcm_about-distro.po  kcm_samba.po
po/be/: kcm_samba.po  kcmusb.po
po/bg/: kcm_about-distro.po
po/bn/: kcmusb.po
po/bn_IN/: kcmusb.po
po/br/: kcm_samba.po  kcmusb.po
po/bs/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/ca/: kcm_about-distro.po  kcm_energyinfo.po  kcm_samba.po  kcmusb.po  kinfocenter.po
po/ca@valencia/: kcm_about-distro.po  kcm_energyinfo.po  kcm_samba.po  kcmusb.po  kinfocenter.po
po/cs/: kcm_about-distro.po
po/csb/: kcm_samba.po  kcmusb.po
po/cy/: kcm_samba.po  kcmusb.po
po/da/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/de/: kcm_about-distro.po  kcm_energyinfo.po  kcm_samba.po  kcmusb.po
po/el/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/en_GB/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/eo/: kcm_about-distro.po  kcm_samba.po
po/es/: kcm_about-distro.po
po/et/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/eu/: kcm_about-distro.po  kcm_energyinfo.po  kcm_samba.po  kcmusb.po  kinfocenter.po
po/fa/: kcm_samba.po  kcmusb.po
po/fi/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/fr/: kcm_about-distro.po  kcm_energyinfo.po  kcm_samba.po  kcmusb.po
po/fy/: kcm_samba.po  kcmusb.po
po/ga/: kcm_about-distro.po  kcm_samba.po
po/gl/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/gu/: kcm_samba.po  kcmusb.po
po/he/: kcm_about-distro.po  kcm_energyinfo.po  kcm_samba.po  kcmusb.po  kinfocenter.po
po/hi/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/hne/: kcm_samba.po  kcmusb.po
po/hr/: kcm_samba.po  kcmusb.po
po/hsb/: kcmusb.po
po/hu/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/ia/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/id/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/is/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/it/: kcm_about-distro.po  kcm_energyinfo.po  kcm_samba.po  kcmusb.po
po/ja/: kcm_about-distro.po
po/ka/: kcm_about-distro.po  kcm_samba.po
po/kk/: kcm_samba.po  kcmusb.po
po/km/: kcm_samba.po  kcmusb.po
po/kn/: kcm_samba.po  kcmusb.po
po/ko/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/ku/: kcm_samba.po  kcmusb.po
po/lt/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
po/lv/: kcm_about-distro.po  kcm_samba.po  kcmusb.po
src/: CommandOutputContext.cpp
(+136 files in other folders)
